--- a/research.html
+++ b/research.html
@@ -35,20 +35,20 @@ Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Pre
 
 <p> 
 <h4> Work in Progress </h4>
-Why Do Leftist Governments Reduce Labor Enforcement and Increase Informality? Theory and Evidence From Latin America (writing/analysis in process) 
+Informality, Enforcement, and the Left: Theory and Evidence From Latin America  (writing/analysis in process) 
 <br> 
 <br> 
 How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) 
 <br> 
 <br> 
-Left for Dead: Issue Ownership and Expectation Setting in the Context of Large Workplace Fatal Accidents (writing/analysis in process) 
+Left for Dead: The Electoral Effects of Large Workplace Fatal Accidents (writing/analysis in process) 
 <!-- <br> 
 <br> 
 A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (analysis in process) [<a href="abstracts.html#paper2" target="_blank">abstract</a>]   
  -->
 <br> 
 <br> 
-The Trade-offs of Trade Liberalization: Unemployment, Informality, and Enforcement 
+The Electoral Consequences of Trade Liberalization: Evidence from a Natural Experiment   
 <!-- <br> 
 <br> 
 Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>] -->
