--- a/research.html
+++ b/research.html
@@ -26,19 +26,19 @@
 
 <p> 
 <h4>Under Review</h4>
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program <!-- [<a href="titling.pdf" target="_blank">paper</a>]  -->
-<br> 
-<br> 
 Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> <!-- [<a href="wealthy.pdf" target="_blank">paper</a>] -->
+<br> 
+<br> 
+Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil (writing/analysis in process) 
+<br> 
+<br> 
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program <!-- [<a href="titling.pdf" target="_blank">paper</a>]  -->
 </p> 
 
 
 <p> 
 <h4> Work in Progress </h4>
 Informality, Enforcement, and the Left: Theory and Evidence From Latin America  (writing/analysis in process) 
-<br> 
-<br> 
-How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) 
 <br> 
 <br> 
 Left for Dead: The Electoral Effects of Large Workplace Fatal Accidents (writing/analysis in process) 
