--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> <!-- [<a href="wealthy.pdf" target="_blank">paper</a>] -->
 <br> 
 <br> 
-Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil (writing/analysis in process) 
+Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil
 <br> 
 <br> 
 Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program <!-- [<a href="titling.pdf" target="_blank">paper</a>]  -->
