--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <p> 
 <h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
 
-<h4 id="german-feierherd"> Research Associate, Department of Political Science, Duke University </br>
-PhD Candidate in Political Science, Yale University </br> 
+<h4 id="german-feierherd"> Postdoctoral Associate, Department of Political Science, Yale University </br>
 Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 </p> 
 
@@ -30,11 +29,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 <p>
 <img src="profile.jpeg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
 
-I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. From September 2016, I will be a research associate in the Political Science Department at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on labor and social policies (in the context of "weak" states), distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. <br />
-
-<br />
-My dissertation, <i> The Left's Dilemma: How Politics Shapes Labor Markets in Latin America,</i> analyzes a basic dilemma that the Left in power has faced in Latin America: how to respond to the interests and policy preferences of the organized working class and, at the same time, of informal-sector workers. Organized workers and union leaders push for strict enforcement of job security regulations and other protective measures.  But these measures frequently reduce the supply of jobs and increase the risk of unemployment for an ever-larger pool of workers in non-protected jobs &#x2011 the informal sector. The Left's strategy in this context, I show, is to move slowly on the enforcement of regulations, while at the same time trying to avoid bad outcomes (e.g., catastrophic workplace accidents) that can hurt it at the polls. 
-<br />
+A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on labor and social policies (in the context of "weak" states), distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. <br />
 
 <br />
 My publications and working papers are available <a href="research.html">here</a>. Feel free to contact me about ongoing research projects. 
@@ -47,7 +42,7 @@ My publications and working papers are available <a href="research.html">here</a
 </p>
 
 <p class="footer">
-Last updated: October 2016.<br /> 
+Last updated: June 2017.<br /> 
 </p>
 </div> 
 
