--- a/research.html
+++ b/research.html
@@ -22,42 +22,46 @@
 
 
 
+<p> 
+<h4>Peer-Reviewed Journal Articles</h4>
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive  Preferences in Buenos Aires (with Luis Schiumerini and Susan Stokes). Forthcoming at the <i>British Journal of Political Science</i> <!-- [<a href="wealthy.pdf" target="_blank">paper</a>] -->
+<br> 
+<br> 
+Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007 (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
+<br> 
+<br> 
+Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in <i>Revista Argentina de Ciencia Politica</i>, 9/10, 2006 
+</p> 
 
 
 <p> 
 <h4>Under Review</h4>
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> <!-- [<a href="wealthy.pdf" target="_blank">paper</a>] -->
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program.   
+<br>
+<br>
+Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil 
+<br>
+<br>
+Insider&ndash;Outsider Politics and the Informal Economy in Developing Democracies
+<br>
+<br>
+Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents  
 <br> 
-<br> 
-Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil
-<br> 
-<br> 
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program <!-- [<a href="titling.pdf" target="_blank">paper</a>]  -->
 </p> 
 
 
 <p> 
 <h4> Work in Progress </h4>
-Informality, Enforcement, and the Left: Theory and Evidence From Latin America  (writing/analysis in process) 
-<br> 
-<br> 
-Left for Dead: The Electoral Effects of Large Workplace Fatal Accidents (writing/analysis in process) 
-<!-- <br> 
-<br> 
-A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (analysis in process) [<a href="abstracts.html#paper2" target="_blank">abstract</a>]   
- -->
-<br> 
-<br> 
-The Electoral Consequences of Trade Liberalization: Evidence from a Natural Experiment   
+The Electoral Consequences of Trade Liberalization: Evidence from a Natural Experiment  
+<br>
+<br>
+Paying Not to Vote: Pocketbook Considerations and the Shape of the Electorate (with Gerson Julcarimna and Guadalupe Tuñón) 
+
 <!-- <br> 
 <br> 
 Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>] -->
 </p> 
 
-<p> 
-<h4>Peer-Reviewed Journal Articles</h4>
-Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007 (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in America Latina Hoy, 54, April 2010 
-</p> 
 
 <p> 
 <h4> Other Publications </h4>
@@ -65,9 +69,6 @@ From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown Univer
 <br> 
 <br> 
 Gathering Beans: The Size of Legislative Coalitions in Argentina (1983-2008) (“Juntando Porotos: El Tamaño de las Coaliciones Legislativas en Argentina”), in A. Mustapic, A. Bonvecchi, and J. Zelaznik (comps.), Los Legisladores en el Congreso Argentino, Instituto Torcuato Di Tella, 2012 
-<br> 
-<br> 
-Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in Revista Argentina de Ciencia Politica, 9/10, 2006 
 </p>
 
 
@@ -82,7 +83,7 @@ Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso 
 </p>
 
 <p class="footer">
-Last updated: June 2015.<br /> 
+Last updated: June 2017.<br /> 
 </p>
 </div> 
 
