--- a/research.html
+++ b/research.html
@@ -65,6 +65,10 @@ Religion Versus Nationhood: Organizing Health Care in Argentina and the US (anal
 
 <p> 
 <h4> Other Publications </h4>
+"The U.S. could be free of gerrymandering. Here's how other countries do redistricting,"
+Monkey Cage Blog, <i>{Washington Post</i>, August 7th, 2017
+<br> 
+<br> 
 From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown University, May 2014
 <br> 
 <br> 
