--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@ Religion Versus Nationhood: Organizing Health Care in Argentina and the US (anal
 <p> 
 <h4> Other Publications </h4>
 "The U.S. could be free of gerrymandering. Here's how other countries do redistricting,"
-Monkey Cage Blog, <i>{Washington Post</i>, August 7th, 2017
+Monkey Cage Blog, <i>Washington Post</i>, August 7th, 2017
 <br> 
 <br> 
 From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown University, May 2014
