--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 
 
 <p>
-<img src="profile.jpeg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
+<img src="profile1.png" alt="German" style="float:left;width:238px;height:238px; margin-right:15px; margin-bottom:15px">
 
 A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, state capacity, and elections. I am also interested in methods for causal inference in observational and experimental studies. <br />
 
