--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@ Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling
 Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil (under review)
 <br>
 <br>
-Insider&ndash;Outsider Politics and the Informal Economy in Developing Democracies
+Does the Left Breed Economic Informality? Party Strategies and Selective Enforcement in Brazil (job market paper)
 <br>
 <br>
 Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents  
