--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="center">  
 <p> 
-<h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
+<h1 id="german-feierherd"><b> Germ&#225n G. Feierherd </b> </h1>
 
 <h4 id="german-feierherd"> Postdoctoral Associate, Department of Political Science, Yale University </br>
 Research Associate, Center on the Politics of Development, UC Berkeley </h4>
@@ -29,7 +29,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 <p>
 <img src="profile.jpg" alt="German" style="float:left;width:238px;height:218px; margin-right:15px; margin-bottom:15px">
 
-A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, state capacity, and elections. I am also interested in methods for causal inference in observational and experimental studies. <br />
+A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on labor markets, political parties, and elections. I am also interested in methods for causal inference in observational and experimental studies. My research spans the developing world, with a special focus on Latin America. <br />
 
 <br />
 My publications and working papers are available <a href="research.html">here</a>. Feel free to contact me about ongoing research projects. 
