--- a/teaching.html
+++ b/teaching.html
@@ -73,13 +73,13 @@ Useful resources for R users:
 
 <p>
 <hr class="footer"/>
-<a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://twitter.com/Feierherd/">Github</a> | <a href="https://twitter.com/Feierherd/">Google Scholar</a>
+<a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://twitter.com/Feierherd/">Github</a> | <a href="https://twitter.com/Feierherd/"><a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en&oi=sra">Google Scholar</a>
 </p>
 
 
 
 <p class="footer">
-Last updated: June 2015.<br /> 
+Last updated: November 2017.<br /> 
 </p>
 </div> 
 
