--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 <p>
 <img src="German11.jpg" alt="German" style="float:left;width:265px;height:265px; margin-right:15px; margin-bottom:5px">
 
-A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on labor markets, political parties, and elections. I am also interested in methods for causal inference in observational and experimental studies. My research spans the developing world, with a special focus on Latin America. <br />
+A Doctor at Yale, I was a Pre/Postdoctoral Associate in Political Science at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a> during 2016-17. Since May 2017, I am a Postdoctoral Associate at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy</a>. I conduct theoretical and empirical research on political development, with an emphasis on elections, political parties, and policymaking in the context of weak institutions. I am also interested in methods for causal inference in observational and experimental studies. My research spans the developing world, with a special focus on Latin America. <br />
 
 <br />
 My publications and working papers are available <a href="research.html">here</a>. Feel free to contact me about ongoing research projects. 
@@ -38,11 +38,11 @@ My publications and working papers are available <a href="research.html">here</a
 
 <p>
 <hr class="footer">
-<a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://github.com/feierherd">Github</a> | <a href="https://scholar.google.com/">Google Scholar</a>
+<a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://github.com/feierherd">Github</a> | <a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en&oi=sra">Google Scholar</a>
 </p>
 
 <p class="footer">
-Last updated: June 2017.<br /> 
+Last updated: November 2017.<br /> 
 </p>
 </div> 
 
