--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@ This paper contains parts of my book manuscript, <i>The Left's Dilemma: Party St
 
 <p> 
 <h2>Peer-Reviewed Journal Articles</h2>
-<a href="http://http://feierherd.github.io/Wealthy.pdf">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC">replication files</a>] 
+<a href="http://feierherd.github.io/Wealthy.pdf">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC">replication files</a>] 
 <br> 
 <br> 
 <a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
