--- a/research.html
+++ b/research.html
@@ -29,29 +29,23 @@ This paper contains parts of my book manuscript, <i>The Left's Dilemma: Party St
 </p> 
 
 <p> 
-<h2>Peer-Reviewed Journal Articles</h2>
+<h2>Peer-Reviewed Journal Articles / Revise and Resubmit </h2>
+Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="hhttp://feierherd.github.io/Sharingthecosts.pdf">abstract</a>]
+<br> 
+<br> 
 <a href="http://feierherd.github.io/Wealthy.pdf">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC">replication files</a>] 
 <br> 
 <br> 
 <a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
-<br> 
-<br> 
-Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in <i>Revista Argentina de Ciencia Politica</i>, 9/10, 2006 
 </p> 
+
 
 <p> 
 <h2> Working Papers </h2>
-Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents  
-<h3> Recent scholarship argues that "myopic" voters – those who focus almost entirely on
-incumbent performance in the months just before the election – do not create incentives for elected officials to act responsively. Instead I use original data to show that myopic voters in Brazil hold their mayors accountable for spikes in workplace deaths; in turn, elected officials respond by minimizing fatal accidents throughout the term. These dynamics, however, do not apply to officeholders from all political parties; as in the U.S., certain parties "own" issues and are uniquely held to account for bad outcomes in those issue areas. The findings have implications for understanding the impact of democracy on labor standards, as well as for assessing the conditions under which electoral sanctions improve incumbent performance </h3>
-
-Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil (under review)
-<h3> Much of the literature in distributive politics suggests that parties are advantaged nationally
-when they control office at the local level. But is this invariably true? Whatever advantage control over the local patronage machinery may offer, local governments might under some conditions sully their parties' labels and thus hurt up-ticket candidates. My analysis, which features a regression discontinuity design in mayoral races in Brazil, demonstrates the critical role that party labels play in linking national and local elections. I show that the presidential tickets of parties with strong brands suffer a large electoral penalty in municipalities governed by co-partisans, especially when voters are dissatisfied with the local government. Loosely organized parties with weak party labels do not suffer from a similar disadvantage. Hence, this study shows that for programmatic parties with strong party brands, mayors can be more of a burden than an asset </h3>
-
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program (under review)  
-<h3> Central governments often favor their elected district allies in distributive politics. But what happens when there are more than two relevant levels of government – e.g., a central government, the state or provincial government, and a municipality or county? Using an original dataset with information about a major South American land-titling program and a unique two-level regression-discontinuity design in close regional and municipal elections, I show that the central government gave priority to municipalities in which the mayor was an ally of the central administration but the governor was an opponent. The objective was to minimize party splits, undermine the electoral standing of governors, and gain the goodwill of squatters. I show that the program yielded an increased vote share for the president's party in both allied- and, more importantly, opposition-held provinces. Taking only the president-governor or president-mayor relationship into account in this setting would lead to biased inferences and misleading conclusions about the central government's strategy </h3>
-
+Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents [<a href="hhttp://feierherd.github.io/Myopic.pdf">abstract</a>] 
+<br> 
+<br> 
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="hhttp://feierherd.github.io/Titling.pdf">abstract</a>]  
 </p> 
 
 <p> 
@@ -78,6 +72,9 @@ From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown Univer
 <br> 
 <br> 
 Gathering Beans: The Size of Legislative Coalitions in Argentina (1983-2008) (“Juntando Porotos: El Tamaño de las Coaliciones Legislativas en Argentina”), in A. Mustapic, A. Bonvecchi, and J. Zelaznik (comps.), Los Legisladores en el Congreso Argentino, Instituto Torcuato Di Tella, 2012 
+<br> 
+<br> 
+Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in <i>Revista Argentina de Ciencia Politica</i>, 9/10, 2006 
 </p>
 
 
