--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@ This paper contains parts of my book manuscript, <i>The Left's Dilemma: Party St
 
 <p> 
 <h2>Peer-Reviewed Journal Articles / Revise and Resubmit </h2>
-Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="hhttp://feierherd.github.io/Sharingthecosts.pdf">abstract</a>]
+Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf">abstract</a>]
 <br> 
 <br> 
 <a href="http://feierherd.github.io/Wealthy.pdf">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC">replication files</a>] 
@@ -42,10 +42,10 @@ Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and 
 
 <p> 
 <h2> Working Papers </h2>
-Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents [<a href="hhttp://feierherd.github.io/Myopic.pdf">abstract</a>] 
+Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents [<a href="http://feierherd.github.io/Myopic.pdf">abstract</a>] 
 <br> 
 <br> 
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="hhttp://feierherd.github.io/Titling.pdf">abstract</a>]  
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="http://feierherd.github.io/Titling.pdf">abstract</a>]  
 </p> 
 
 <p> 
