--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@ This paper contains parts of my book manuscript, <i>The Left's Dilemma: Party St
 </p> 
 
 <p> 
-<h2>Peer-Reviewed Journal Articles / Revise and Resubmit </h2>
+<h2>Peer-Reviewed and Revise & Resubmit Articles </h2>
 Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf">abstract</a>]
 <br> 
 <br> 
