--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@ This paper contains parts of my book manuscript, <i>The Left's Dilemma: Party St
 Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf" target="_blank">abstract</a>]
 <br> 
 <br> 
-<a href="http://feierherd.github.io/Wealthy.pdf" target="_blank">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] 
+<a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] 
 <br> 
 <br> 
 <a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954" target="_blank">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
