--- a/teaching.html
+++ b/teaching.html
@@ -14,21 +14,18 @@
 <body>
 
 
-<div class="center"> 
+<div class="center" style="margin:10;padding:50"> 
 
 
-<ul class="pages">
-    <a href="index.html">Home</a> | <a href="Feierherd CV.pdf">CV</a> | <a href="research.html">Research</a>  | <a href="teaching.html">Teaching</a>
-</ul>
-
-
+<h2> Teaching Experience</h2>
 
 <p> 
-<h2> Teaching </h2>
 At Yale, I served as a teaching fellow for substantive courses on comparative politics and the core courses on statistics and quantitative methods offered to PhD students in the Political Science department (with Professor Peter Aronow). In this capacity, I taught classes on probability theory, regression analysis, missing data, causal inference, and parametric models. I also ran weekly lab sessions and taught students to program in R. My teaching interests include comparative politics, quantitative research methods (all levels), Latin American politics, political economy of development, and political parties and elections.
+</p>
 
 <p>
 At Yale, I served as a teaching fellow for the following courses: 
+</p>
 
 <ul>
   <li>Sex, Markets, and Power (Undergraduate Level), Spring 2016</li>
@@ -36,15 +33,22 @@ At Yale, I served as a teaching fellow for the following courses:
   <li>Quantitative Methods (Graduate Level), Spring 2014</li>
   <li>Statistics (Graduate Level), Fall 2013</li>
   <li>Intro to Comparative Politics (Undergraduate Level), Spring 2013</li>
-  </ul>
+</ul>
 
+<p>
 At Universidad Torcuato Di Tella: 
+</p>
 
 <ul>
   <li>Political Institutions and Government (Undergraduate Level), 2006</li>
 </ul>
  
+
+<h2> Teaching Resources</h2>
+
+<p>
 In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a>, you will find useful statistical code in R. I developed (and also borrowed) most of this code while teaching statistics and quantitative methods at Yale: 
+</p>
 
 <ul>
   <li>A lenghty introduction to R (installing R, manipulating objects, functions, random variables, loading datasets, programming, apply/lapply/sapply/tapply, if-then-else statements, loops, writing functions, graphs, Monte Carlo simulations, installing/loading packages and running a linear regression)</li>
@@ -61,7 +65,10 @@ In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a
   <li>An intro to RDD in R</li>
 </ul>
 
+<p>
 Useful resources for R users: 
+</p>
+
 <ul>
 <li><a href="https://google-styleguide.googlecode.com/svn/trunk/Rguide.xml" target="_blank">Google's style guide</a></li>
 <li><a href="http://tim-smith.us/arrgh/" target="_blank">aRrgh, by Tim Smith</a></li>
@@ -71,16 +78,10 @@ Useful resources for R users:
 <a href="index.html">Back to main</a>
 
 
-<p>
-<hr class="footer"/>
-<a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://twitter.com/Feierherd/">Github</a> | <a href="https://twitter.com/Feierherd/"><a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en&oi=sra">Google Scholar</a>
-</p>
-
-
-
 <p class="footer">
-Last updated: November 2017.<br /> 
+Last updated: November 2017. 
 </p>
+
 </div> 
 
 </body>
