--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso 
 <a href="https://github.com/feierherd">Github</a><br> 
 <a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en&oi=sra">Google Scholar</a>
 <hr>
-<a href="teaching.html">Teaching resources</a>
+<a href="teaching.html">Teaching Resources</a>
 
 </div>
 
