--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
 <p>
 <h1 id="german-feierherd" style="text-align:left"><b> Germ&#225n Feierherd </b> </h1>
-Assistant Professor (profesor adjunto de tiempo completo), Universidad de San Andrés (starting August 2018)</br>
+Assistant Professor (profesor adjunto de tiempo completo), <a href=https://www.udesa.edu.ar" title="UDESA Uiversity">Universidad de San Andrés</a>, Buenos Aires, Argentina.</br>
 <p/>
 
 <p>
 I conduct theoretical and empirical research on political development, with an emphasis on elections, political parties, and policymaking in the context of weak institutions.
 <p/>
 
-<p>
-I received my PhD in Political Science from Yale University in December 2016. During 2016-17, I was a Pre/Postdoctoral Associate at Duke University and in May 2017 I began a one-year postdoctoral position at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy.</a> From August 2018, I will be assistant professor at <a href=https://www.udesa.edu.ar" title="UDESA Uiversity">Universidad de San Andrés</a> in Buenos Aires, Argentina. I am also a research associate of the <a href=http://cpd.berkeley.edu title="Yale Uiversity"> Center for the Politics of Development</a> at UC Berkeley. 
+<p> 
+I received my PhD in Political Science from Yale University in December 2016. During 2016-17, I was a Pre/Postdoctoral Associate at Duke University and in May 2017 I began a one-year postdoctoral position at Yale’s <a href=http://ypd.macmillan.yale.edu/" title="Yale Uiversity">Program on Democracy.</a>  I am also a research associate of the <a href=http://cpd.berkeley.edu title="UC"> Center for the Politics of Development</a> at UC Berkeley. 
 <p/>
 
 <p>
